Bug 1108960 - notify all steams for the resource ID when any stream get closed/suspended/resumed. r=roc.