dom/media/MediaCache.cpp
@@ -194,6 +194,10 @@ public:
   // This queues a call to Update() on the main thread.
   void QueueUpdate();
 
+  // Notify all streams for the resource ID that the suspended status changed
+  // at the end of MediaCache::Update.
+  void QueueSuspendedStatusUpdate(int64_t aResourceID);
+
   // Updates the cache state asynchronously on the main thread:
   // -- try to trim the cache back to its desired size, if necessary
   // -- suspend channels that are going to read data that's lower priority
@@ -347,6 +351,8 @@ protected:
 #ifdef DEBUG
   bool            mInUpdate;
 #endif
+  // A list of resource IDs to notify about the change in suspended status.
+  nsTArray<int64_t> mSuspendedStatusToNotify;
 };
 
 NS_IMETHODIMP
@@ -1351,10 +1357,12 @@ MediaCache::Update()
     case RESUME:
       CACHE_LOG(PR_LOG_DEBUG, ("Stream %p Resumed", stream));
       rv = stream->mClient->CacheClientResume();
+      QueueSuspendedStatusUpdate(stream->mResourceID);
       break;
     case SUSPEND:
       CACHE_LOG(PR_LOG_DEBUG, ("Stream %p Suspended", stream));
       rv = stream->mClient->CacheClientSuspend();
+      QueueSuspendedStatusUpdate(stream->mResourceID);
       break;
     default:
       rv = NS_OK;
@@ -1369,6 +1377,15 @@ MediaCache::Update()
       stream->CloseInternal(mon);
     }
   }
+
+  // Notify streams about the suspended status changes.
+  for (uint32_t i = 0; i < mSuspendedStatusToNotify.Length(); ++i) {
+    MediaCache::ResourceStreamIterator iter(mSuspendedStatusToNotify[i]);
+    while (MediaCacheStream* stream = iter.Next()) {
+      stream->mClient->CacheClientNotifySuspendedStatusChanged();
+    }
+  }
+  mSuspendedStatusToNotify.Clear();
 }
 
 class UpdateEvent : public nsRunnable
@@ -1397,6 +1414,15 @@ MediaCache::QueueUpdate()
   mUpdateQueued = true;
   nsCOMPtr<nsIRunnable> event = new UpdateEvent();
   NS_DispatchToMainThread(event);
+}
+
+void
+MediaCache::QueueSuspendedStatusUpdate(int64_t aResourceID)
+{
+  NS_ASSERTION(NS_IsMainThread(), "Only call on main thread");
+  if (!mSuspendedStatusToNotify.Contains(aResourceID)) {
+    mSuspendedStatusToNotify.AppendElement(aResourceID);
+  }
 }
 
 #ifdef DEBUG_VERIFY_CACHE
@@ -1980,6 +2006,10 @@ MediaCacheStream::CloseInternal(ReentrantMonitorAutoEnter& aReentrantMonitor)
   if (mClosed)
     return;
   mClosed = true;
+  // Closing a stream will change the return value of
+  // MediaCacheStream::AreAllStreamsForResourceSuspended as well as
+  // ChannelMediaResource::IsSuspendedByCache. Let's notify it.
+  gMediaCache->QueueSuspendedStatusUpdate(mResourceID);
   gMediaCache->ReleaseStreamBlocks(this);
   // Wake up any blocked readers
   aReentrantMonitor.NotifyAll();
